// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileNavigation styles should render with secondary links 1`] = `
.circuit-16 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out, -webkit-transform 120ms ease-in-out;
  -webkit-transition: opacity 120ms ease-in-out, transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, transform 120ms ease-in-out;
  outline: none;
  background-color: #FFF;
  overflow: hidden;
}

.circuit-16::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient( rgba(255,255,255,0), rgba(255,255,255,0.66), rgba(255,255,255,1) );
}

.circuit-17 {
  opacity: 1 !important;
  -webkit-transform: translateY(0) !important;
  -ms-transform: translateY(0) !important;
  transform: translateY(0) !important;
}

.circuit-18 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: rgba(0,0,0,0.4);
  z-index: 1000;
}

.circuit-19 {
  opacity: 1;
}

.circuit-15 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient( to bottom,rgba(255,255,255,1),rgba(255,255,255,1) 60%,rgba(255,255,255,0) );
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(16px - 1px);
  border-color: transparent !important;
  background-color: transparent;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-14 {
  list-style: none;
}

.circuit-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: #3063E9;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #F5F5F5;
}

.circuit-6:active {
  background-color: #E6E6E6;
}

.circuit-6:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width:959px) {
  .circuit-6 {
    margin-bottom: 1px;
  }

  .circuit-6::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #E6E6E6;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width:960px) {
  .circuit-6 {
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-6:hover {
  background-color: #F0F6FF;
}

.circuit-3 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-4 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  font-weight: 700;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

@media (max-width:959px) {
  .circuit-4 {
    font-size: 24px;
    line-height: 28px;
  }
}

@media (min-width:960px) {
  .circuit-4 {
    max-width: 160px;
  }
}

.circuit-5 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  margin-left: auto;
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  -webkit-transition: transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
}

.circuit-13 {
  list-style: none;
  border-bottom: 1px solid #E6E6E6;
  margin-bottom: -1px;
}

.circuit-13 > *:last-child {
  padding-bottom: 24px;
}

.circuit-7 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 12px;
  color: #000;
  margin-bottom: 0;
  padding: 32px 16px 8px;
}

.circuit-12 {
  list-style: none;
}

.circuit-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: #1A1A1A;
  background-color: #FFF;
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 16px 24px;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.circuit-9:hover {
  background-color: #F5F5F5;
}

.circuit-9:active {
  background-color: #E6E6E6;
}

.circuit-9:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-9:focus::-moz-focus-inner {
  border: 0;
}

.circuit-9:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-9:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (min-width:960px) {
  .circuit-9 {
    padding: 12px 20px;
  }
}

.circuit-8 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-18 circuit-19"
    >
      <div
        aria-modal="true"
        class="circuit-16 circuit-17"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-15"
        >
          <div
            class="circuit-2"
          >
            <button
              class="circuit-1"
              title="Close navigation modal"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 3l10 10m0-10L3 13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="circuit-0"
              >
                Close navigation modal
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-14"
            >
              <li>
                <button
                  aria-controls="collapsible_2"
                  aria-current="page"
                  aria-expanded="false"
                  class="circuit-6"
                  data-focus-list="1"
                >
                  <div
                    class="circuit-3"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4.5 7h15m-15 0L3.119 19.893A1 1 0 004.113 21h15.774a1 1 0 00.994-1.107L19.5 7m-15 0l3.201-3.659A1 1 0 018.454 3h7.092a1 1 0 01.753.341L19.5 7"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M16 11a4 4 0 01-8 0"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                  <span
                    class="circuit-4"
                  >
                    Shop
                  </span>
                  <svg
                    class="circuit-5"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 6l4 4 4-4"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </button>
                <ul
                  aria-hidden="true"
                  class="circuit-13"
                  id="collapsible_2"
                  role="list"
                  style="overflow-y: hidden; will-change: height; opacity: 0; height: 0px; visibility: hidden; transition: all 200ms ease-in-out;"
                >
                  <li>
                    <h3
                      class="circuit-7"
                    >
                      For Kids
                    </h3>
                    <ul
                      class="circuit-12"
                      role="list"
                    >
                      <li>
                        <a
                          class="circuit-9"
                          data-focus-list="3"
                          href="/shop/toys"
                        >
                          <p
                            class="circuit-8"
                          >
                            Toys
                          </p>
                        </a>
                      </li>
                      <li>
                        <a
                          class="circuit-9"
                          data-focus-list="3"
                          href="/shop/books"
                        >
                          <p
                            class="circuit-8"
                          >
                            Books
                          </p>
                        </a>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileNavigation styles should render without secondary links 1`] = `
.circuit-8 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out, -webkit-transform 120ms ease-in-out;
  -webkit-transition: opacity 120ms ease-in-out, transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, transform 120ms ease-in-out;
  outline: none;
  background-color: #FFF;
  overflow: hidden;
}

.circuit-8::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient( rgba(255,255,255,0), rgba(255,255,255,0.66), rgba(255,255,255,1) );
}

.circuit-9 {
  opacity: 1 !important;
  -webkit-transform: translateY(0) !important;
  -ms-transform: translateY(0) !important;
  transform: translateY(0) !important;
}

.circuit-10 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: rgba(0,0,0,0.4);
  z-index: 1000;
}

.circuit-11 {
  opacity: 1;
}

.circuit-7 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient( to bottom,rgba(255,255,255,1),rgba(255,255,255,1) 60%,rgba(255,255,255,0) );
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(16px - 1px);
  border-color: transparent !important;
  background-color: transparent;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-6 {
  list-style: none;
}

.circuit-3 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #F5F5F5;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width:959px) {
  .circuit-5 {
    margin-bottom: 1px;
  }

  .circuit-5::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #E6E6E6;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width:960px) {
  .circuit-5 {
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-4 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

@media (max-width:959px) {
  .circuit-4 {
    font-size: 24px;
    line-height: 28px;
  }
}

@media (min-width:960px) {
  .circuit-4 {
    max-width: 160px;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-10 circuit-11"
    >
      <div
        aria-modal="true"
        class="circuit-8 circuit-9"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-2"
          >
            <button
              class="circuit-1"
              title="Close navigation modal"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 3l10 10m0-10L3 13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="circuit-0"
              >
                Close navigation modal
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-6"
            >
              <li>
                <a
                  class="circuit-5"
                  data-focus-list="4"
                  href="/"
                >
                  <div
                    class="circuit-3"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 4.271l8 5.714v8.765c0 .69-.56 1.25-1.25 1.25H13v-6h-2v6H5.25C4.56 20 4 19.44 4 18.75V9.985l8-5.714zm-6 6.744V18h3v-6h6v6h3v-6.985l-6-4.286-6 4.286z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span
                    class="circuit-4"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;
